--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a store manager attempting to become a dev for both professional and personal reasons </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Beaumont and then moved to Austin in 2005</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I game and delve into crypto projects often</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I plan to make several DAPPs for the crypto space, hoping one of them becomes the next big one</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently reside in Austin Texas</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I need these skills in order to progress further in my crypto endeavors </p>
     </section>
 
     <footer id="footer">
